mygateWay/jenkins-gateWay_httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: jenkins-gw
  namespace: ci
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins-route
  namespace: ci
spec:
  parentRefs:
  - name: jenkins-gw
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jenkins
      port: 8080
